# OpenWater

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md
cmake/modules/: FindGLFW3.cmake
docs/: Hello Creating a window.md  doc.md  hello opengl.md
libs/: glfw3.lib  glfw3_d.lib
openwater/: CMakeLists.txt  glad.c  root_directory.h  stb_image.h
openwater/learnopengl/: shader_s.h
test/: CMakeLists.txt
